- Created Individual class - Created Population class with a list of Individuals - Implemented selection method - Implemented evaluation method (runs python script with the individual) - NOT FINISHED -> Implemented Crossover method